fix: fix getLongest method to print it in the console